--- a/package.json
+++ b/package.json
@@ -31,30 +31,32 @@
     "postinstall": "husky install"
   },
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-types": "^0.8.8-9",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "chalk": "^4.1.2",
+    "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "class-transformer": "^0.5.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "fs-extra": "^10.0.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "fs-extra": "^11.1.0",
     "gulp": "^4.0.2",
     "gulp-zip": "^5.1.0",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.3.2",
-    "rollup": "^2.56.3",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "semver": "^7.3.5",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.2",
-    "yargs": "^17.1.1"
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.3",
+    "rollup": "^3.10.1",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "semver": "^7.3.8",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4",
+    "yargs": "^17.6.2"
   },
   "lint-staged": {
     "*.(ts|js)": "eslint --fix",
     "*.(json|css)": "prettier --write"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2"
   }
 }
